# ai-for-construction-safety

./: DATA.md  EVIDENCE_PACKAGE.md  MODEL_CARD.md  Makefile  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
reproducibility_scripts/: complete_ai_open_evidence.py  generate_ai_open_evidence_package.py  generate_grove_claims_report.py  run_ai_open_experiments.py
reproducibility_scripts/ai_open_experiments/: __init__.py  claims_report.py  completion.py  evidence_package.py  grounding_sensitivity.py  run_grounding_sensitivity.py  suite.py
results/full_suite_2026-06-08/: README.md  ablation_results.csv  ablation_results.md  aggregate_metrics.csv  aggregate_metrics.md  aggregate_metrics_completed.csv  failure_attribution_agreement.csv  failure_attribution_detail.csv  failure_attribution_double_annotation_template.csv  failure_attribution_results.csv  failure_confusion_breakdown.csv  ground_truth_annotations.csv  ground_truth_image_category_matrix.csv  grounding_metrics.csv  grounding_per_category_metrics.csv  hazard_predictions.csv  per_category_identification_metrics.csv  per_category_predictions.csv  source_manifest.csv  statistical_comparisons.csv  statistical_comparisons.md  threshold_sensitivity.csv
results/full_suite_2026-06-08/evidence_package/: GROVE_AI_Open_Ablation_Evidence_Package.html  GROVE_AI_Open_Ablation_Evidence_Package.tex  README.md  captions.md  claim_traceability_matrix.csv  claim_traceability_matrix.md  claim_traceability_matrix_completed.csv  claim_traceability_matrix_completed.md  (+30 more)
tests/: test_evidence_package.py
(+23 files in other folders)
